--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<div id="title"></div>
 		<div id="content"></div>
 		<div id="ops"><br></div>
+		<script type="text/javascript" src="zalphalo.js"></script>
 		<script type="text/javascript" src="gribsaba.js"></script>
 	</body>
 </html>
