generally improved everything

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Zalphalo</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="assets/style.css">
 	</head>
 	<body>
 		<div id="title"></div>
 		<div id="content"></div>
-		<div id="ops"><br></div>
+		<div id="ops"></div>
+		<div id="hud"></div>
 		<script type="text/javascript" src="zalphalo.js"></script>
 		<script type="text/javascript" src="gribsaba.js"></script>
 	</body>
