--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 	<body>
 		<div id="title"></div>
 		<div id="content"></div>
+		<br>
 		<div id="ops"></div>
 		<div id="hud"></div>
-		<script type="text/javascript" src="zalphalo.js"></script>
+		<script type="text/javascript" src="world/inventory.js"></script>
+		<script type="text/javascript" src="world/map.js"></script>
+		<script type="text/javascript" src="world/mainland.js"></script>
+		<script type="text/javascript" src="world/lupa minora.js"></script>
+		<script type="text/javascript" src="world/lupa majora.js"></script>
+		<script type="text/javascript" src="world/sapphire island.js"></script>
 		<script type="text/javascript" src="gribsaba.js"></script>
 	</body>
 </html>
