made a passable dummy fighting system

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<script type="text/javascript" src="world/lupa minora.js"></script>
 		<script type="text/javascript" src="world/lupa majora.js"></script>
 		<script type="text/javascript" src="world/sapphire island.js"></script>
+		<script type="text/javascript" src="world/god.js"></script>
+		<script type="text/javascript" src="world/fight.js"></script>
 		<script type="text/javascript" src="gribsaba.js"></script>
 	</body>
 </html>
