--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
 		<br>
 		<div id="ops"></div>
 		<div id="hud"></div>
-		<script type="text/javascript" src="world/inventory.js"></script>
-		<script type="text/javascript" src="world/map.js"></script>
-		<script type="text/javascript" src="world/mainland.js"></script>
-		<script type="text/javascript" src="world/lupa minora.js"></script>
-		<script type="text/javascript" src="world/lupa majora.js"></script>
-		<script type="text/javascript" src="world/sapphire island.js"></script>
-		<script type="text/javascript" src="world/god.js"></script>
-		<script type="text/javascript" src="world/fight.js"></script>
+		<script type="text/javascript" src="zalphalo.js"></script>
 		<script type="text/javascript" src="gribsaba.js"></script>
 	</body>
 </html>
