add the possibility of commentary, and a few little fixes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<div id="title"></div>
 		<div id="himg"></div>
 		<div id="content"></div>
+    <div id="commentary" style="color:red"></div>
 		<br>
 		<div id="ops"></div>
 		<div id="hud"></div>
