some last-miinute aesthetic changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<body>
 		<div id="title"></div>
 		<div id="himg"></div>
-		<div id="content"></div>
+    <div id="nook"></div><br><br>
+		<div id="content"></div><br>
     <div id="commentary" style="color:red"></div>
 		<br>
 		<div id="ops"></div>
