--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <div id="title"></div>
     <div id="himg"></div>
     <div id="nook"></div><br><br>
-    <div id="content"></div><br>
+    <div id="description"></div><br>
     <div id="commentary" style="color:red"></div>
     <br>
     <div id="ops"></div>
     <div id="hud"></div>
+    <script type="text/javascript" src="gribsia.js"></script>
     <script type="text/javascript" src="zalphalo.js"></script>
-    <script type="text/javascript" src="gribsaba.js"></script>
   </body>
 </html>
