embrace public submodule approach to gribsia dependency

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <br>
     <div id="ops"></div>
     <div id="hud"></div>
-    <script type="text/javascript" src="../gribsia/gribsia.js"></script>
+    <script type="text/javascript" src="gribsia/gribsia.js"></script>
     <script type="text/javascript" src="zalphalo.js"></script>
   </body>
 </html>
